<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- The text as name displayed on the top of the application when opened -->
    <string name="app_name">AlarmClockSong</string>
    
    <!-- The text displayed when you open the preferences of the app -->
    <string name="action_settings">Settings</string>
    
    <!-- The text displayed when you open the preferences of the app -->
    <string name="action_exit">Exit</string>
    
    <!-- Text displayed when you push the button 'add alarm' -->
    <string name="add_alarm">Add Alarm</string>
    
    <!-- Text displayed when the screen to set the alarm is opened -->
    <string name="set_alarm">Set Alarm</string>
    
    <!-- Text displayed for the text in the Set Alarm Screen to ask the time  -->
    <string name="time">Time</string>

    <!-- This is the character use to concatenate the selected days  
         on the repeat option in the alarm                      -->
    <string name="day_concat">", "</string>
    
    <string name="active_alarm">Active Alarm</string>
    
    <string name="select_days" >Select Days</string>
    
    <string name="every_day">Every Day</string>
    
    <string name="alarm_repeat">Repeat</string>
    
    <string name="ringtone">Ringtone</string>
    
    <string name="vibrate">Vibrate</string>
    
    <string name="never">Never</string>
    
    <string name="label">Label</string>
    
    <string name="done">Done</string>
    
    <string name="revert">Revert</string>
    
    <string name="delete">Delete</string>
    
    <string name="preferences">Preferences</string>
    
    <string name="silence">Silence</string>
    
    <string name="volumen_title">Volumen</string>
    
    <string name="volumen_summary">Set the Alarm\'s Volume</string>
    
    <string name="volumen_dialog_title">Alarm Volumen</string>
    
    <string name="stop_alarm" >Stop Alarm</string>
    
    <string name="stop">Stop</string>
    
    <string name="time_7_am" >7:00</string>
    
    <string name="snooze_alarm" >Snooze duration</string>
    
    <string name="snooze">Snooze</string>
    
    <string name="random_ringtone">Random Ringtone</string>
    
    <string name="submit">Submit</string>
    
    <string name="notification">Notification</string>
    
    <string name="alarm_alert">Alarm Alert!</string>
    
    <string name="themes" >Themes</string>
    
    <string name="alarm_setted" >You\'ve setted an alarm for </string>
    
    <string name="alarm_snoozed" >You\'ve snoozed an alarm for </string>
    
    <string name="at" > at </string>
    
</resources>