<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       >
       
       <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active_alarm"
            android:textSize="8pt"
            android:layout_gravity="left"
        />       
       
     
       
   </LinearLayout> 
    
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:onClick="setTime">
       
       <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="8pt"
            android:layout_gravity="left"
        />       
        
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_7_am"
            android:textSize="6pt"
            android:id="@+id/time"
            android:layout_gravity="left"
        />   
       
   </LinearLayout>
   
     
     

</LinearLayout>
