<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alarm_alert"
            android:textSize="36sp" 
            android:padding="10dp"/>

        <View style="@style/HorizontalDivider" />

        <TextView
            android:id="@+id/alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="14sp" 
            android:padding="10sp"/>

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" 
            android:padding="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" 
            android:layout_weight="10"
            android:layout_margin="10sp">

            <!-- <TextView
                android:id="@+id/mathQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="14 + 2 / 4 * 5"
                android:textSize="24sp" /> -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" 
            android:layout_weight="30"
            android:layout_margin="10sp"
            >

           <!--  <RadioGroup
                android:id="@+id/radioMathQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/RadioMAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:text="35" />

                <RadioButton
                    android:id="@+id/RadioMAnswer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_margin="8sp"
                    android:text="12" />

                <RadioButton
                    android:id="@+id/RadioMAnswer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_margin="8sp"
                    android:text="17" />

                <RadioButton
                    android:id="@+id/RadioMAnswer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_margin="8sp"
                    android:text="90" />
            </RadioGroup> -->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="20sp" >

        <Button
            android:id="@+id/stopAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/stop"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/snoozeAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/snooze"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>